# hidapi-usbddk

./: CMakeLists.txt
src/: CMakeLists.txt
usbddk/: CMakeLists.txt  hid.c  hidapi_usbddk.h
